--- a/package.yml
+++ b/package.yml
@@ -3,7 +3,7 @@ package:
   name: "shd"
   type: "api"
   status: "production"
-  required: true
+  required: false
   version: "v1.0.0"
 
   dependencies:
