--- a/boards/wbz351_curiosity.yml
+++ b/boards/wbz351_curiosity.yml
@@ -75,22 +75,22 @@ interfaces:
         pinctrl:
           qsck:
             pinId: RA1
-            function: QSPI_SCK (out)
+            function: QSPI_SCK
           qcs:
             pinId: RB13
-            function: QSPI_CS (out)
+            function: QSPI_CS
           sio0:
             pinId: RA0
-            function: QSPI_DATA0 (in/out)
+            function: QSPI_DATA0
           sio1:
             pinId: RB12
-            function: QSPI_DATA1 (in/out)
+            function: QSPI_DATA1
           sio2:
             pinId: RB11
-            function: QSPI_DATA2 (in/out)
+            function: QSPI_DATA2
           sio3:
             pinId: RA2
-            function: QSPI_DATA3 (in/out)
+            function: QSPI_DATA3
             pull up: True
 
   - name: Temp sensor interface
@@ -114,30 +114,30 @@ interfaces:
           tx:
             pinId: RA5
             name: CONSOLE_TX
-            function: SERCOM0_PAD0 (out)
+            function: SERCOM3_PAD1 (out)
           rx:
             pinId: RA6
             name: CONSOLE_RX
-            function: SERCOM0_PAD1 (in)
+            function: SERCOM3_PAD0 (in)
       - name: USART HW flow control
         description: USART HW flow control
         pinctrl:
           tx:
             pinId: RA5
             name: USB_USART_TX
-            function: SERCOM0_PAD0 (out)
+            function: SERCOM0_PAD0
           rx:
             pinId: RA6
             name: USB_USART_RX
-            function: SERCOM0_PAD1 (in)
+            function: SERCOM0_PAD1
           rts:
             pinId: RB4
             name: USB_USART_RTS
-            function: SERCOM0_PAD2 (out)
+            function: SERCOM0_PAD2
           cts:
             pinId: RA3
             name: USB_USART_CTS
-            function: SERCOM0_PAD3 (in)
+            function: SERCOM0_PAD3
 
 connectors:
   - compatible: mikrobus
@@ -158,23 +158,23 @@ connectors:
         cs:
           pinId: RA9
           name: mikroBUS_SPI_CS
-          function: SERCOM1_PAD2 (out)
+          function: SERCOM1_PAD2
         sck:
           pinId: RA8
           name: mikroBUS_SPI_SCK
-          function: SERCOM1_PAD1 (out)
+          function: SERCOM1_PAD1
         miso:
           pinId: RA10
           name: mikroBUS_SPI_MISO
-          function: SERCOM1_PAD3 (in)
+          function: SERCOM1_PAD3
         mosi:
           pinId: RA7
           name: mikroBUS_SPI_MOSI
-          function: SERCOM1_PAD0 (out)
+          function: SERCOM1_PAD0
       int:
         pinId: RB10
         name: mikroBUS_INT
-        function: EIC_EXTINT2 (in)
+        function: EIC_EXTINT2
       pwm:
         pinId: PB10
         name: mikroBUS_PWM
@@ -183,20 +183,20 @@ connectors:
         tx:
           pinId: RA7
           name: mikroBUS_UART_TX
-          function: SERCOM1_PAD0 (out)
+          function: SERCOM1_PAD0
         rx:
           pinId: RA8
           name: mikroBUS_UART_RX
-          function: SERCOM1_PAD1 (in)
+          function: SERCOM1_PAD1
       i2c:
         sda:
           pinId: RA13
           name: mikroBUS_I2C_SDA
-          function: SERCOM2_SDA (in)
+          function: SERCOM2_SDA
         scl:
           pinId: RA14
           name: mikroBUS_I2C_SCL
-          function: SERCOM2_SCL (out)
+          function: SERCOM2_SCL
 
   - compatible: xplainpro
     name: Extension Header EXT1
@@ -231,7 +231,7 @@ connectors:
       irq:
         pinId: RB2
         name: EXT1_IRQ
-        function: EIC_EXTINT2 (in)
+        function: EIC_EXTINT2
       gpio ss:
         pinId: RB4
         name: EXT1_GPIO_SS
@@ -242,34 +242,34 @@ connectors:
         sda:
           pinId: RA13
           name: EXT1_I2C_SDA
-          function: SERCOM2_SDA (in)
+          function: SERCOM2_SDA
         scl:
           pinId: RA14
           name: EXT1_I2C_SCL
-          function: SERCOM2_SCL (out)
+          function: SERCOM2_SCL
       uart:
         tx:
           pinId: RA7
           name: mikroBUS_UART_TX
-          function: SERCOM1_PAD0 (out)
+          function: SERCOM1_PAD0
         rx:
           pinId: RA8
           name: mikroBUS_UART_RX
-          function: SERCOM1_PAD1 (in)
+          function: SERCOM1_PAD1
       spi:
         cs:
           pinId: RA9
           name: EXT1_SPI_CS
-          function: SERCOM1_PAD2 (out)
+          function: SERCOM1_PAD2
         sck:
           pinId: RA8
           name: EXT1_SPI_SCK
-          function: SERCOM1_PAD1 (out)
+          function: SERCOM1_PAD1
         miso:
           pinId: RA10
           name: EXT1_SPI_MISO
-          function: SERCOM1_PAD3 (in)
+          function: SERCOM1_PAD3
         mosi:
           pinId: RA7
           name: EXT1_SPI_MOSI
-          function: SERCOM1_PAD0 (out)
+          function: SERCOM1_PAD0
