Set pull downs in INT signal for PL460 EK (extension board) MH3-112271

--- a/clickBoards/pl460_ek_plc_g3macrt.yml
+++ b/clickBoards/pl460_ek_plc_g3macrt.yml
@@ -24,6 +24,7 @@ supported:
     latch: high
   irq:
     name: PL460_EXTINT
+    pull down: True
     description: PL460 External Interrupt (IRQ)
   gpio ss:
     name: PL460_NTHW0
