--- a/boards/pic32mk_mcj_curiosity_pro.yml
+++ b/boards/pic32mk_mcj_curiosity_pro.yml
@@ -165,7 +165,7 @@ connectors:
         sck:
           pinId: RF0
           name: EXT1_SPI_SCK
-          function: SPI2_SCK2
+          function: SPI2_SCK2 (out)
         miso:
           pinId: RD6
           name: EXT1_SPI_MISO
@@ -246,7 +246,7 @@ connectors:
         sck:
           pinId: RF0
           name: EXT2_SPI_SCK
-          function: SPI2_SCK2
+          function: SPI2_SCK2 (out)
         miso:
           pinId: RD6
           name: EXT2_SPI_MISO
@@ -327,7 +327,7 @@ connectors:
         sck:
           pinId: RF0
           name: EXT3_SPI_SCK
-          function: SPI2_SCK2
+          function: SPI2_SCK2 (out)
         miso:
           pinId: RD6
           name: EXT3_SPI_MISO
@@ -397,7 +397,7 @@ connectors:
         sck:
           pinId: RF0
           name: Arduino_D13_SPI_SCK
-          function: SPI2_SCK2
+          function: SPI2_SCK2 (out)
         miso:
           pinId: RD6
           name: Arduino_D12_SPI_MISO
