Add drv_sst26 connection for Flash 2 click board. Solved issue in SSTV26 settings MH3-112303

--- a/clickBoards/flash2_click.yml
+++ b/clickBoards/flash2_click.yml
@@ -4,7 +4,7 @@ description: >
   manufactured by using the proprietary high-performance CMOS Super-Flash® technology
 documentation: https://www.mikroe.com/flash-2-click
 compatible: mikrobus
-dependencies: [["NC", spi]]
+dependencies: [[drv_sst26, spi]]
 multiconnection: False
 supported:
   rst:
