wbz653-curiosity-board: Replace STDIO by Console service MH3-112378

--- a/boards/wbz653_curiosity.yml
+++ b/boards/wbz653_curiosity.yml
@@ -223,7 +223,7 @@ interfaces:
     options:
       - name: USART console interface
         description: USART console interface
-        dependencies: [[stdio, sercom0]]
+        dependencies: [[sys_console, sercom0]]
         pinctrl:
           tx:
             pinId: RA5
